# actix-todo-list

./: Cargo.toml  database.sql
migrations/2024-03-07-192633_create_db/: up.sql
src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
