[package]
name = "actixcourse1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
serde = { version = "1.0.197", features = ["derive"] }
dotenv = "0.15.0"
config = "0.11.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = { version = "0.12.1", features = ["serde"]}
tokio-postgres = "0.7.10"
slog = "2.7.0"
slog-term = "2.9.1"
slog-async = "2.8.0"